Add Handling for Thread as Change Event